# SSD_sim

./: CMakeLists.txt  README.md
include/: block.h  ftl.h  ssd.h
src/: block.cpp  ftl.cpp  ssd.cpp
test/: test_ssd.cpp
